# next.js

./: .eslintrc.cli.json  .eslintrc.json  .prettierignore  Cargo.toml  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-tests.js  tsconfig.json  turbo.json
.changeset/: dry-roses-nail.md  silent-houses-lay.md  tricky-planes-worry.md
.github/ISSUE_TEMPLATE/: 1.bug_report.yml
.github/workflows/: build_and_deploy.yml  build_and_test.yml  build_reusable.yml  code_freeze.yml  create_release_branch.yml  deploy_docs.yml  integration_tests_reusable.yml  issue_stale.yml  npm-grunt.yml  pull_request_stats.yml  release-next-rspack.yml  retry_deploy_test.yml  retry_test.yml  test_examples.yml  (+4 more)
errors/: missing-data-scroll-behavior.mdx  next-prerender-dynamic-metadata.mdx  next-prerender-dynamic-viewport.mdx  next-prerender-missing-suspense.mdx  sync-dynamic-apis.mdx
patches/: @base-ui-components__react@1.0.0-beta.1.patch  stacktrace-parser@0.1.10.patch  taskr@1.1.0.patch
rspack/: Cargo.toml  package.json  pnpm-lock.yaml
rspack/crates/binding/: Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json
rspack/crates/binding/src/: config_shared.rs  handle_externals.rs  lib.rs  next_externals_plugin.rs
rspack/lib/: index.d.ts  index.js
scripts/: build-native.ts  deploy-docs.sh  git-configure.mjs  pack-next.ts  patch-next.ts  run-for-change.js
test/: experimental-tests-manifest.json  rspack-build-tests-manifest.json  rspack-dev-tests-manifest.json  turbopack-build-tests-manifest.json  turbopack-dev-tests-manifest.json
(+959 files in other folders)
